# AAU_BDS24_M4_Portfolio_Assignment_3

./: README.md
project/: README.md
project/src/: pyproject.toml
project/src/project/: app.py  crew.py  main.py  test.md
project/src/project/config/: agents.yaml  tasks.yaml
project/src/project/tools/: custom_tool.py  test.md
